# py-pieces

./: .gitignore  README.md  pyproject.toml  ruff.toml
examples/: anyio_test.py  polars_test.py  serde_test.py
snippets/: copy.py  prime.py  rhythmic.py
src/: anyio_test.py  async_demo.py  blossom_algo.py  hello_python.py  kata.py  polars_test.py  serde_test.py  simple_mcp_server.py  simple_mcp_stdio_client.py  simple_mcp_streamable_client.py
src/collection/: snippets.py
src/learn/: async_demo.py  collections_demo.py  discryptor.py  enum_demo.py
src/ulib/utils/: model.py
