[project]
name = "py-pieces"
version = "2026.4.0"
description = "Python code pieces"
requires-python = ">=3.14"
dependencies = [
  "anyio>=4.13.0",
  "orjson>=3.11.8",
  "polars>=1.39.3",
  "pydantic>=2.12.5",
  "scikit-learn>=1.8.0",
  "trio>=0.33.0",
]

[dependency-groups]
dev = [
  "ruff>=0.15.9",
  "ty>=0.0.29",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.sources]
"src" = "ulib"

[tool.hatch.build.targets.wheel]
packages = ["src/ulib"]

[tool.uv]
python-preference = "managed"
prerelease = "if-necessary-or-explicit"
