[project]
name = "py-pieces"
version = "2026.7.0"
description = "Python code pieces"
requires-python = ">=3.14"
dependencies = [
  "anyio>=4.14.2",
  "orjson>=3.11.9",
  "polars>=1.42.1",
  "pydantic>=2.13.4",
  "scikit-learn>=1.9.0",
  "trio>=0.33.0",
]

[dependency-groups]
dev = [
  "ruff>=0.15.22",
  "ty>=0.0.60"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.sources]
"src" = "ulib"

[tool.hatch.build.targets.wheel]
packages = ["src/ulib"]

[tool.uv]
python-preference = "managed"
prerelease = "if-necessary-or-explicit"
resolution = "highest"
